--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
