--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   }
 }
