--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6"
+    "multer-s3": "^3.0.1",
+    "sharp": "^0.32.6",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
