--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1"
