--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@vercel/analytics": "^1.1.2",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "jwt-decode": "^4.0.0",
