--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.12.2",
     "jwt-decode": "^4.0.0",
     "prettier": "^3.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
@@ -30,6 +31,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^6.0.11"
   }
 }
